--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "echo \"No build step required\"",
+    "test": "echo \"No tests implemented\" && exit 0",
     "deploy-commands": "node deploy-commands.js",
     "test:webhook": "node testWebhook.js",
     "test:webhook-embed": "node testWebhookEmbed.js"
   },
   "author": "Aashwin FP",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@discordjs/builders": "^1.11.2",
     "@prisma/client": "^6.11.1",
@@ -19,6 +24,9 @@
     "dotenv": "^16.5.0",
     "node-fetch": "^3.3.2",
     "puppeteer": "^24.11.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.11.1"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -30,8 +38,5 @@
     "self-roles",
     "webhook",
     "logging"
-  ],
-  "devDependencies": {
-    "prisma": "^6.11.1"
-  }
+  ]
 }
